# samedit

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  mise.toml  spec.md
crates/cockpit/: Cargo.toml
crates/cockpit-analytics/: Cargo.toml
crates/cockpit-analytics/src/: dag.rs  detect.rs  lib.rs  materialise.rs  template.rs
crates/cockpit-config/: Cargo.toml
crates/cockpit-config/src/: cockpit_layout.rs  crew.rs  launcher.rs  lib.rs  zellij_layout.rs
crates/cockpit-crew/: Cargo.toml
crates/cockpit-crew/src/: command_ids.rs  lib.rs  orchestrate.rs  run.rs  spec.rs  worktree.rs
crates/cockpit-editor/: Cargo.toml
crates/cockpit-editor/src/: buffer.rs  cursor.rs  editor.rs  highlight.rs  lib.rs  nearest_test.rs  search.rs  test_runner.rs  undo.rs  vim.rs
crates/cockpit-editor/tests/: golden_editor.rs  golden_highlight.rs  golden_vim.rs  proptest_buffer.rs  proptest_editor.proptest-regressions  proptest_editor.rs
crates/cockpit-editor/tests/snapshots/: golden_editor__golden_append_after_cursor.snap  golden_editor__golden_change_word.snap  golden_editor__golden_count_delete_lines.snap  golden_editor__golden_delete_char.snap  golden_editor__golden_delete_line.snap  golden_editor__golden_delete_word.snap  golden_editor__golden_go_to_file_ends.snap  golden_editor__golden_insert_text.snap  golden_editor__golden_join_lines.snap  golden_editor__golden_normal_motions.snap  golden_editor__golden_open_line_below.snap  golden_editor__golden_replace_char.snap  golden_editor__golden_replace_mode.snap  golden_editor__golden_search_jumps_to_match.snap  golden_editor__golden_search_repeat.snap  golden_editor__golden_undo_then_redo.snap  golden_editor__golden_visual_delete.snap  golden_editor__golden_visual_line_delete.snap  golden_editor__golden_word_motions.snap  golden_editor__golden_yank_and_paste.snap  golden_highlight__golden_attribute_and_macro.snap  golden_highlight__golden_comments_and_strings.snap  golden_highlight__golden_function.snap  golden_highlight__golden_go_basic.snap  golden_highlight__golden_struct_and_types.snap  golden_vim__golden_change_word.snap  golden_vim__golden_command_write_quit.snap  golden_vim__golden_count_jump.snap  golden_vim__golden_count_motion.snap  golden_vim__golden_gg_and_dd.snap  golden_vim__golden_insert_then_escape.snap  golden_vim__golden_normal_motions.snap  golden_vim__golden_open_line_below.snap  golden_vim__golden_operator_motion.snap  golden_vim__golden_replace_char.snap  golden_vim__golden_replace_mode.snap  golden_vim__golden_search.snap  golden_vim__golden_search_repeat.snap  golden_vim__golden_undo_redo_delete_paste.snap  golden_vim__golden_visual_delete.snap  (+1 more)
crates/cockpit-hotkey/: Cargo.toml
crates/cockpit-hotkey/src/: bus.rs  chord.rs  error.rs  lib.rs
crates/cockpit-http/: Cargo.toml
crates/cockpit-http/src/: collection.rs  engine.rs  engine_reqwest.rs  lib.rs  model.rs  parse.rs  prepare.rs  serialise.rs
crates/cockpit-http/tests/: golden_round_trip.rs  integration_reqwest.rs
crates/cockpit-ipc/: Cargo.toml
crates/cockpit-ipc/src/: codec.rs  error.rs  lib.rs  transport.rs  wire.rs
crates/cockpit-jot/: Cargo.toml
crates/cockpit-jot/src/: app.rs  lib.rs  loader.rs  main.rs  popover.rs
crates/cockpit-jot/tests/: capture_cli.rs
crates/cockpit-launcher/: Cargo.toml
crates/cockpit-launcher/src/: action.rs  builtins.rs  calc.rs  launcher.rs  lib.rs  lua.rs  mise.rs  provider.rs  service.rs
crates/cockpit-lsp/: Cargo.toml
crates/cockpit-lsp/src/: client.rs  codec.rs  jsonrpc.rs  lib.rs  registry.rs
crates/cockpit-lua/: Cargo.toml
crates/cockpit-lua/src/: api.rs  capability.rs  event.rs  http_grants.rs  http_scripts.rs  lib.rs  theme.rs  watcher.rs
crates/cockpit-lua/tests/: bench.rs
crates/cockpit-mux/: Cargo.toml
crates/cockpit-mux/src/: lib.rs
crates/cockpit-notebook/: Cargo.toml
crates/cockpit-notebook/src/: chart.rs  lib.rs  parse.rs  quarto.rs  quarto_export.rs  render.rs
crates/cockpit-org/: Cargo.toml
crates/cockpit-org/src/: agenda.rs  capture.rs  date.rs  edit.rs  keywords.rs  lib.rs  model.rs  parse.rs  service.rs  store.rs  timestamp.rs
crates/cockpit-org/tests/: agenda_fixture.rs  bench.rs  capture_config.rs  round_trip.rs  service_ipc.rs
crates/cockpit-paint/: Cargo.toml
crates/cockpit-paint/src/: lib.rs  popover.rs
crates/cockpit-project/: Cargo.toml
crates/cockpit-project/src/: env.rs  formatter.rs  git.rs  lib.rs
crates/cockpit-project/tests/: golden_project.rs
crates/cockpit-project/tests/snapshots/: golden_project__golden_detect_file_tree_git_project.snap  golden_project__golden_detect_mise_basic.snap  golden_project__golden_detect_rust_basic.snap  golden_project__golden_parse_mise_toml.snap
crates/cockpit-quick/: Cargo.toml
crates/cockpit-quick/src/: controller.rs  lib.rs  loader.rs  main.rs
crates/cockpit-render/: Cargo.toml
crates/cockpit-render/src/: app.rs  atlas.rs  atlas_persist.rs  frame.rs  geometry.rs  glyph_cache.rs  key_event.rs  lib.rs  painter.rs  renderer.rs  text.rs  text_mesh.rs  theme.rs
crates/cockpit-sql/: Cargo.toml
crates/cockpit-sql/src/: detect.rs  duckdb.rs  engine.rs  fake.rs  ggsql.rs  lib.rs
crates/cockpit-terminal/: Cargo.toml
crates/cockpit-terminal/src/: bridge.rs  command.rs  engine.rs  io_thread.rs  lib.rs  live.rs  path_detect.rs  pty.rs  session.rs  termwiz_engine.rs  zellij.rs
crates/cockpit-terminal/tests/: golden_path_detect.rs
crates/cockpit-terminal/tests/snapshots/: golden_path_detect__golden_python_traceback.snap  (+2 more)
crates/cockpit-testkit/: Cargo.toml
crates/cockpit-testkit/src/: bench.rs  lib.rs
crates/cockpit-tray/: Cargo.toml
crates/cockpit-tray/src/: lib.rs  menu.rs
crates/cockpit-ui/: Cargo.toml
crates/cockpit-ui/src/: completion.rs  crew.rs  file_browser.rs  file_finder.rs  http.rs  hydration.rs  launcher.rs  leader_menu.rs  lib.rs  org.rs  palette.rs  prompt.rs
crates/cockpit-ui/tests/: golden_palette.rs
crates/cockpit/src/: app.rs  crew.rs  hydration.rs  launcher.rs  main.rs  mux_layout.rs  splash.rs  startup.rs
crates/cockpit/tests/: cold_start.rs
(+32 files in other folders)
