[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates — referenced by members as `cockpit-foo.workspace = true`.
cockpit-config = { path = "crates/cockpit-config" }
cockpit-commands = { path = "crates/cockpit-commands" }
cockpit-project = { path = "crates/cockpit-project" }
cockpit-quick = { path = "crates/cockpit-quick" }
cockpit-editor = { path = "crates/cockpit-editor" }
cockpit-hotkey = { path = "crates/cockpit-hotkey" }
cockpit-http = { path = "crates/cockpit-http" }
cockpit-ipc = { path = "crates/cockpit-ipc" }
cockpit-jot = { path = "crates/cockpit-jot" }
cockpit-launcher = { path = "crates/cockpit-launcher" }
cockpit-lsp = { path = "crates/cockpit-lsp" }
cockpit-lua = { path = "crates/cockpit-lua" }
cockpit-mux = { path = "crates/cockpit-mux" }
cockpit-terminal = { path = "crates/cockpit-terminal" }
cockpit-tray = { path = "crates/cockpit-tray" }
cockpit-ui = { path = "crates/cockpit-ui" }
cockpit-analytics = { path = "crates/cockpit-analytics" }
cockpit-notebook = { path = "crates/cockpit-notebook" }
cockpit-org = { path = "crates/cockpit-org" }
cockpit-paint = { path = "crates/cockpit-paint" }
cockpit-render = { path = "crates/cockpit-render" }
cockpit-sql = { path = "crates/cockpit-sql" }
cockpit-testkit = { path = "crates/cockpit-testkit" }

[profile.release]
lto = "thin"
