[package]
name = "cockpit-analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "dbt-lite project mode for Coding Cockpit (v0.5)."

[dependencies]
cockpit-project.workspace = true
cockpit-sql.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.8"
