[package]
name = "cockpit-editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Rope buffer, cursor, undo, and Vim state machine for Coding Cockpit."

[dependencies]
ropey = "1.6.1"
tree-sitter = "0.26.9"
tree-sitter-go = "0.25.0"
tree-sitter-highlight = "0.26.9"
tree-sitter-rust = "0.24.2"

[dev-dependencies]
insta = "1.43.2"
proptest = "1.11.0"
