[package]
name = "cockpit-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bruno-compatible .bru parser, model, and (later) HTTP runner for Coding Cockpit (v0.11)."

[features]
default = []
integration = []

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[dev-dependencies]
insta = "1.43.2"
tempfile = "3.27.0"
