[package]
name = "cockpit-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LSP client foundation for Coding Cockpit."

[dependencies]
lsp-types = "0.97.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
