[package]
name = "cockpit-mux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Headless terminal multiplexer data model for Coding Cockpit."

[dependencies]
cockpit-commands.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[dev-dependencies]
insta = "1.43.2"
serde_json = "1.0.145"
