[package]
name = "cockpit-terminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "PTY, terminal engine, Zellij launcher, and path detection for Coding Cockpit."

[features]
default = []
integration = []

[dependencies]
anyhow = "1.0.102"
portable-pty = "0.9.0"
termwiz = "0.23.3"
thiserror = "2.0.18"

[dev-dependencies]
cockpit-testkit.workspace = true
insta = "1.43.2"
