[package]
name = "cockpit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "A fast, native, multi-platform coding cockpit."

[features]
default = []
ui-smoke = []
# Cold-start budget check (v0.6 M6.1) — opt-in so the default
# `cargo test` stays hermetic and fast.
bench = []

[dependencies]
cockpit-project.workspace = true
cockpit-testkit.workspace = true
cockpit-commands.workspace = true
cockpit-config.workspace = true
cockpit-editor.workspace = true
cockpit-lsp.workspace = true
cockpit-render.workspace = true
cockpit-terminal.workspace = true
cockpit-ui.workspace = true
anyhow = "1.0.102"
rfd = "0.15.2"
clap = { version = "4.5.50", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.27.0"
